generate pairwise distance matrices for fragment length 16

--- a/data.ipynb
+++ b/data.ipynb
@@ -132,86 +132,178 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing 16-residue fragments: 100%|██████████| 115535/115535 [2:16:11<00:00, 14.14it/s]  \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 1927226 matrices of size 16x16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing 16-residue fragments: 100%|██████████| 6234/6234 [10:05<00:00, 10.29it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved 75274 matrices of size 16x16\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# \"To create our datasets,\n",
-    "# we extract non-overlapping fragments of lengths 16, 64, and 128 from chain ‘A’ for each protein\n",
-    "# structure starting at the first residue and calculate the pairwise distance matrices from the alpha-carbon\n",
-    "# coordinate positions\"\n",
+    "#  we extract non-overlapping fragments of lengths 16, 64, and 128 from chain ‘A’ for each protein\n",
+    "#  structure starting at the first residue and calculate the pairwise distance matrices from the alpha-carbon\n",
+    "#  coordinate positions\"\n",
     "\n",
     "import os\n",
     "import numpy as np\n",
     "from Bio import PDB\n",
     "from tqdm import tqdm\n",
+    "from concurrent.futures import ThreadPoolExecutor, as_completed\n",
     "\n",
     "def load_structure(pdb_file):\n",
-    "    \"\"\"Load a PDB structure and return the first model and chain A.\"\"\"\n",
     "    parser = PDB.PDBParser(QUIET=True)\n",
     "    structure = parser.get_structure(\"protein\", pdb_file)\n",
-    "    model = structure[0]\n",
-    "    chain_a = model[\"A\"]\n",
-    "    return chain_a\n",
+    "    return structure[0][\"A\"]  # Return the first model and chain A\n",
     "\n",
     "def extract_fragments(chain, fragment_length):\n",
-    "    \"\"\"Extract non-overlapping fragments of specified length from the chain.\"\"\"\n",
     "    fragments = []\n",
     "    residues = list(chain.get_residues())\n",
-    "    \n",
     "    for i in range(0, len(residues) - fragment_length + 1, fragment_length):\n",
     "        fragment = residues[i:i+fragment_length]\n",
     "        if len(fragment) == fragment_length:\n",
     "            fragments.append(fragment)\n",
-    "    \n",
     "    return fragments\n",
     "\n",
     "def calculate_distance_matrix(fragment):\n",
-    "    \"\"\"Calculate pairwise distance matrix for alpha carbons in the fragment.\"\"\"\n",
     "    coords = []\n",
     "    for residue in fragment:\n",
     "        if \"CA\" in residue:\n",
     "            coords.append(residue[\"CA\"].coord)\n",
-    "    \n",
     "    coords = np.array(coords)\n",
-    "    dist_matrix = np.linalg.norm(coords[:, np.newaxis] - coords, axis=2)\n",
+    "    if len(coords) < 2:\n",
+    "        return np.array([])\n",
+    "    diff = coords[:, np.newaxis, :] - coords[np.newaxis, :, :]\n",
+    "    dist_matrix = np.sqrt(np.sum(diff**2, axis=-1))\n",
     "    return dist_matrix\n",
     "\n",
-    "def process_pdb_file(pdb_file, fragment_lengths=[16, 64, 128]):\n",
-    "    \"\"\"Process a single PDB file and return distance matrices for each fragment length.\"\"\"\n",
-    "    chain = load_structure(pdb_file)\n",
-    "    results = {length: [] for length in fragment_lengths}\n",
-    "    \n",
-    "    for length in fragment_lengths:\n",
-    "        fragments = extract_fragments(chain, length)\n",
+    "def process_pdb_file(pdb_file, fragment_length):\n",
+    "    try:\n",
+    "        chain = load_structure(pdb_file)\n",
+    "        fragments = extract_fragments(chain, fragment_length)\n",
+    "        matrices = []\n",
     "        for fragment in fragments:\n",
     "            dist_matrix = calculate_distance_matrix(fragment)\n",
-    "            if dist_matrix.shape[0] == length:\n",
-    "                results[length].append(dist_matrix)\n",
-    "    \n",
-    "    return results\n",
+    "            if dist_matrix.shape == (fragment_length, fragment_length):\n",
+    "                matrices.append(dist_matrix)\n",
+    "        return matrices\n",
+    "    except Exception as e:\n",
+    "        return []\n",
     "\n",
-    "def create_datasets(pdb_dir, output_dir, fragment_lengths=[16, 64, 128]):\n",
-    "    \"\"\"Create datasets from PDB files in the specified directory.\"\"\"\n",
+    "def create_datasets(pdb_dir, output_dir, fragment_lengths=[16, 64, 128], num_threads=16, batch_size=1000):\n",
     "    if not os.path.exists(output_dir):\n",
     "        os.makedirs(output_dir)\n",
     "    \n",
     "    pdb_files = [f for f in os.listdir(pdb_dir) if f.endswith('.ent') or f.endswith('.pdb')]\n",
     "    \n",
     "    for length in fragment_lengths:\n",
-    "        all_matrices = []\n",
+    "        output_file = os.path.join(output_dir, f'distance_matrices_{length}.npy')\n",
     "        \n",
-    "        for pdb_file in tqdm(pdb_files, desc=f\"Processing {length}-residue fragments\"):\n",
-    "            results = process_pdb_file(os.path.join(pdb_dir, pdb_file), [length])\n",
-    "            all_matrices.extend(results[length])\n",
+    "        if os.path.exists(output_file):\n",
+    "            print(f\"Skipping {length}-residue fragments, output file already exists\")\n",
+    "            continue\n",
     "        \n",
-    "        dataset = np.array(all_matrices)\n",
-    "        np.save(os.path.join(output_dir, f'distance_matrices_{length}.npy'), dataset)\n",
-    "        print(f\"Saved {len(dataset)} matrices of size {length}x{length}\")\n",
+    "        batch_matrices = []\n",
+    "        total_matrices = 0\n",
     "\n",
-    "create_datasets('pdb_files/train', 'datasets/train')\n",
-    "create_datasets('pdb_files/test', 'datasets/test')"
+    "        with ThreadPoolExecutor(max_workers=num_threads) as executor:\n",
+    "            futures = {executor.submit(process_pdb_file, os.path.join(pdb_dir, f), length): f for f in pdb_files}\n",
+    "\n",
+    "            for future in tqdm(as_completed(futures), total=len(futures), desc=f\"Processing {length}-residue fragments\"):\n",
+    "                matrices = future.result()\n",
+    "                batch_matrices.extend(matrices)\n",
+    "                \n",
+    "                if len(batch_matrices) >= batch_size:\n",
+    "                    # Save batch to disk\n",
+    "                    batch_array = np.array(batch_matrices)\n",
+    "                    if total_matrices == 0:\n",
+    "                        np.save(output_file, batch_array)\n",
+    "                    else:\n",
+    "                        with open(output_file, 'ab') as f:\n",
+    "                            np.save(f, batch_array)\n",
+    "                    total_matrices += len(batch_matrices)\n",
+    "                    batch_matrices = []\n",
+    "        \n",
+    "        if batch_matrices:\n",
+    "            batch_array = np.array(batch_matrices)\n",
+    "            if total_matrices == 0:\n",
+    "                np.save(output_file, batch_array)\n",
+    "            else:\n",
+    "                with open(output_file, 'ab') as f:\n",
+    "                    np.save(f, batch_array)\n",
+    "            total_matrices += len(batch_matrices)\n",
+    "        \n",
+    "        print(f\"Saved {total_matrices} matrices of size {length}x{length}\")\n",
+    "\n",
+    "create_datasets('pdb_files/train', 'datasets/train', [16])\n",
+    "create_datasets('pdb_files/test', 'datasets/test', [16])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the .npy files created in the previous cell contain multiple arrays (one per batch)\n",
+    "# to concatenate, use something like the following:\n",
+    "\n",
+    "# def load_batched_npy(file_path):\n",
+    "#     with open(file_path, 'rb') as f:\n",
+    "#         arrays = []\n",
+    "#         while True:\n",
+    "#             try:\n",
+    "#                 arrays.append(np.load(f))\n",
+    "#             except ValueError:\n",
+    "#                 break\n",
+    "#     return np.concatenate(arrays)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
